css/mobile.css
/*! Pushy - v0.9.2 - 2014-9-13
* Pushy is a responsive off-canvas navigation menu using CSS transforms & transitions.
* https://github.com/christophery/pushy/
* by Christopher Yee */

@media only screen and (max-width: 480px) {

    .switch {
        display: none;
        visibility: hidden;
    }
    
    #phoneinfo, #emailinfo, #maptoggle {
        width: 80%;
        margin-left: 1.6%;
    }

    #joke {
        display: none;
        visibility: hidden;
    }
    ul[class="droplist"]>li {
        padding-left: 2em;
    }
    ul[class="droplist"]>li>div[class="headingright"] {
        padding-right: 1em;
    }

    #sect2, #sect3, #sect4, #sect5, #sect6 {
        padding-left: 5%;
        padding-right: 5%;
        text-align: left;
    }

    h1 {
        border: 0.2em solid #303030;
        border-radius: 0 0 0 0;
        -moz-border-radius: 0 0;
        -webkit-border-radius: 0 0 0 0;
    }

    #menuicon {
        display: inline-block;
    }

    #dpslogo {
        margin: auto;
        width: 100%;
        max-width: 100%;
        height: auto;
    }

    .menu-btn {
        display: block;
    }

    .pushy{
        position: fixed;
        width: 200px;
        height: 100%;
        top: 0;
        z-index: 9999;
        background: #333332;
        font-size: 0.9em;
        font-weight: bold;
        /*-webkit-box-shadow: inset -10px 0 6px -9px rgba(0, 0, 0, .7);
        -moz-box-shadow: inset -10px 0 6px -9px rgba(0, 0, 0, .7);
        box-shadow: inset -10px 0 6px -9px rgba(0, 0, 0, .7);*/
        overflow: auto;
        -webkit-overflow-scrolling: touch; /* enables momentum scrolling in iOS overflow elements */
    }

    .pushy a{
        display: block;
        color: #b3b3b1;
        padding: 15px 30px;
        border-bottom: 1px solid rgba(0, 0, 0, .1);
        border-top: 1px solid rgba(255, 255, 255, .1);
        text-decoration: none;
    }

    .pushy a:hover{
        background: #00b4ff;
        color: #FFF;
    }

    /* Menu Movement */

    .pushy-left{
        -webkit-transform: translate3d(-200px,0,0);
        -moz-transform: translate3d(-200px,0,0);
        -ms-transform: translate3d(-200px,0,0);
        -o-transform: translate3d(-200px,0,0);
        transform: translate3d(-200px,0,0);
    }

    .pushy-open{
        -webkit-transform: translate3d(0,0,0);
        -moz-transform: translate3d(0,0,0);
        -ms-transform: translate3d(0,0,0);
        -o-transform: translate3d(0,0,0);
        transform: translate3d(0,0,0);
    }

    .container-push, .push-push{
        -webkit-transform: translate3d(200px,0,0);
        -moz-transform: translate3d(200px,0,0);
        -ms-transform: translate3d(200px,0,0);
        -o-transform: translate3d(200px,0,0);
        transform: translate3d(200px,0,0);
    }

    /* Menu Transitions */

    .pushy, #container, .push{
        -webkit-transition: -webkit-transform .2s cubic-bezier(.16, .68, .43, .99);
        -moz-transition: -moz-transform .2s cubic-bezier(.16, .68, .43, .99);
        -o-transition: -o-transform .2s cubic-bezier(.16, .68, .43, .99);
        transition: transform .2s cubic-bezier(.16, .68, .43, .99);
    }

    /* Site Overlay */

    .site-overlay{
        display: none;
    }

    .pushy-active .site-overlay{
        display: block;
        position: fixed;
        top: 0;
        right: 0;
        bottom: 0;
        left: 0;
        z-index: 9998;
        background-color: rgba(0,0,0,0.5);
        -webkit-animation: fade 500ms;
        -moz-animation: fade 500ms;
        -o-animation: fade 500ms;
        animation: fade 500ms;
    }

    @keyframes fade {
        0%   { opacity: 0; }
        100% { opacity: 1; }
    }

}

@media only screen and (max-width:1024px) and (min-width:481px) {
    .nav li {
    width: 4.75em;
    font-size: 1em;
    }
}

/* Example Media Query */
/*
@media screen and (max-width: 768px){
    .pushy{
        font-size: 1.0em;
    }
}*/

